feat(DIS-406): removed success creation message